# MLOps_Project1

./: .gitignore  LICENSE.md  Readme.md  crashcourse.md  demo.py  pyproject.toml  setup.py
src/exception/: __init__.py
src/logger/: __init__.py
