[project]
name = "mlops-project1"
version = "0.1.0"
description = "An MLOps project for Vehicle Insurance"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Preyum Kumar", email = "preyumkrsingh@gmail.com"}]
dependencies = [
    "dotenv>=0.9.9",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.uv.workspace]
members = [
    ".",
    ".",
    ".",
]

[tool.uv.sources]
mlops-project1 = { workspace = true }

[dependency-groups]
dev = [
    "boto3>=1.42.49",
    "botocore>=1.42.49",
    "certifi>=2026.1.4",
    "dill>=0.4.1",
    "fastapi>=0.129.0",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mlops-project1",
    "mypy-boto3-s3>=1.42.37",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
